--- a/public/__forms.html
+++ b/public/__forms.html
@@ -1,7 +1,7 @@
 <html>
     <head></head>
     <body>
-        <form name="feedback" data-netlify="true" hidden>
+        <form name="Contact Me" data-netlify="true" hidden>
             <input type="hidden" name="form-name" value="feedback" />
             <input name="name" type="text" />
             <input name="email" type="text" />
